# aws_iceberg_demo

./: .gitignore  README.md  bootstrap.py  compose.yaml  dashboard.py  docker-compose.yaml  main.py  pyproject.toml  store.properties  tutorial_01.py  tutorial_02.py  tutorial_03.py  tutorial_04.py  tutorial_05.py  tutorial_06.py  tutorial_07.py
src/aws_iceberg_demo/: __init__.py  catalog.py  cli.py  connections.py  data.py  downloads.py  tables.py
trino/: store.properties
