[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-iceberg-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "httpx>=0.28.1",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "pyathena[arrow,sqlalchemy]>=3.12.2",
    "pyiceberg[glue,s3fs]>=0.8.1",
    "rich>=13.9.4",
    "streamlit>=1.42.1",
    "trino[sqlalchemy]>=0.333.0",
    "typer>=0.15.2",
]

[project.scripts]
demo = "aws_iceberg_demo.cli:app"